src/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{0000}</displayFormat>
        <label>Transaction Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Contact_Status_for_Tansaction</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL(Contact__r.Status__c, &quot;Inactive&quot;), 
    ISPICKVAL(Contact__r.Status__c,&quot;&quot;) )</errorConditionFormula>
        <errorMessage>Transaction cannot be performed because Contact is Inactive!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Entry_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Transaction_Date__c !=  TODAY()</errorConditionFormula>
        <errorMessage>Invalid Date selected! Select Today&apos;s Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Minimum_Balance</fullName>
        <active>true</active>
        <description>User shouldn&apos;t be able to debit amount if available balance is less than 3000</description>
        <errorConditionFormula>AND( ISPICKVAL(Type__c, &quot;Debit&quot;),
    (Contact__r.Available_Balance__c -  Amount__c ) &lt; 3000)</errorConditionFormula>
        <errorMessage>Cannot debit amount because Minimum Balance should be 3000.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Per_Transaction_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;Debit&quot;) ,
    Amount__c  &gt; Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_per_Transaction__c)</errorConditionFormula>
        <errorMessage>Per Transaction limit exceeds !</errorMessage>
    </validationRules>
</CustomObject>